--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-This is my first project on Git Hub!
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>JS Bin</title>
+</head>
+<body>
+<img src="C:\Users\fleminge212\Documents\web-site\images\samui-beaches.jpg">
+</body>
+</html>
