--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <head>
   <body>
-<div class="cc-m-all-overlay" data-action="open" data-display="cms-only"></div>
-    <div class="cc-m-all-overlay" data-action="open" data-display="cms-only"></div>
+<span style="font-size: 60px;" data-mce-style="font-size: 60px;">Soccer Success</span>
 
   </body>
  
