--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
   <body>
 <span style="font-size: 60px;" data-mce-style="font-size: 60px;">Soccer Success</span>
-
+<h2>
+  Clinics and Training
+    
+    
   </body>
  
 </head>
