--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <head>
+  <style>
+    <font color="red">Clinics and Training</font>
+  </style>
+  
   <body>
 <span style="font-size: 60px;" data-mce-style="font-size: 60px;">Soccer Success</span>
-<h2>
+<h1>
   Clinics and Training
     
     
