--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 <span style="font-size: 60px;" data-mce-style="font-size: 60px;">Soccer Success</span>
 <h1>
-  Clinics and Training
+  Clinics and Training <font color="red">This is some text!</font>
     
     
   </body>
