--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <div class="column"><h3>Cleats</h3><p>We offer cleats in various brands, colors, and sizes.<br>
       We guarantee you will find a pair of cleats that fit <br>perfectly and show off you persoinal style on the field.<p></div>
   <div class="column"><h3>Balls</h3><p>We offer a variety of balls that fit you style and quality of play. They will help improve your ball control and overall quality of play.
-      <p></div>
+      <p>
+      </div>
  </div>
 </div>
    
@@ -35,17 +36,20 @@
         
   <div class="row">
   <div class="column-left"> 
+    <div class="zoom">
     <a href="default.asp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Adidas_Logo.svg/1280px-Adidas_Logo.svg.png" width="200px" >
 </a>
-    </div>
+    </div></div>
   <div class="column-center">  
+   <div class="zoom">
     <a href="default.asp">
   <img src="https://www.festisite.com/static/partylogo/img/logos/nike.png" width="250px">
-</a>
+     </a></div>
     </div>
   <div class="column-right">
-     <a href="default.asp">
+    <div class="zoom">
+    <a href="default.asp">
   <img src="http://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f8.png" width="250x">
     </a>
     </div>
