--- a/index.html
+++ b/index.html
@@ -4,7 +4,63 @@
 
 <center>
   <body>
+<style>
+    .column {
+    float: left;
+    width: 50%;
+}  
+  
+ .zoom {
+  padding: 20px;
+  background-color: transparent;
+  transition: transform .3s;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+}
 
+.zoom:hover {
+  transform: scale(1.2);
+}
+  
+  .column-left
+  { 
+    position: absolute;
+    left: 50px;
+    top: 650px;
+  }
+  
+  
+  .column-right
+  { 
+    position: absolute;
+    left: 580px;
+    top: 625px;
+  }
+  
+  
+  .column-center
+  { 
+   position: absolute;
+    left: 310px;
+    top: 650px;
+  }
+  
+  
+    h1{
+    font-size:45px;
+    font-family: "veranda", sans-serif;
+    background-color: black;
+    color:white;
+    
+      
+    }
+    body{
+    font-family: "veranda", sans-serif;
+    width:850px;
+    background-color: #E3E3E3;
+
+    </style>
 
   <h1>
      Soccer Success<br><Equipment></Equipment>
