--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="row">
   <div class="column-left"> 
     <div class="zoom">
-    <a href="default.asp">
+    <a href="adidas-page.html">
   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Adidas_Logo.svg/1280px-Adidas_Logo.svg.png" width="200px" >
 </a>
     </div></div>
