--- a/adidas-page.html
+++ b/adidas-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" type="text/css" href="https://jsbin.com/dohemu/edit?html,css,output">
+  <link rel="stylesheet" type="text/css" href="https://github.com/chickentenders4life/web-project/new/master">
 <style>
   .column {
     float: left;
