--- a/adidas-page.html
+++ b/adidas-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" type="text/css" href="https://github.com/chickentenders4life/web-project/new/master">
+  <link rel="stylesheet" type="text/css" href="https://github.com/chickentenders4life/web-project/edit/master/adidas-page.css">
 
    
 <center>
