--- a/adidas-page.html
+++ b/adidas-page.html
@@ -97,7 +97,7 @@
     </h1>
  <center>
   <div class="cleats">
-   <strong> <center> <p>Cleats</p> </div>
+   <center> <p>Cleats</p> </div>
   <div class="row">
   <div class="column-left"> 
    
@@ -136,7 +136,7 @@
   <img src="https://www.imagehandler.net/?iset=0108&img=A1002225000&fmt=png&w=300&h=300&iindex=0062&c=999&cmp=85" width="215x">
     <h4>$29.99</h4></a>
     </div>
-  </strong>
+  
   
   </body>
  </center>
