--- a/adidas-page.html
+++ b/adidas-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <link rel="stylesheet" type="text/css" href="https://github.com/chickentenders4life/web-project/edit/master/adidas-page.css">
+   <link rel="stylesheet" type="text/css" href="https://github.com/chickentenders4life/web-project/edit/master/adidas-page.css">
 <style>
-   .column {
+  .column {
     float: left;
     width: 50%;
 }  
@@ -75,9 +75,10 @@
     font-family: "veranda", sans-serif;
     width:850px;
     background-color: #E3E3E3;
+    
       
-
-  </style>
+  
+ </style>
    
 <center>
   <body>
@@ -97,7 +98,7 @@
     </h1>
  <center>
   <div class="cleats">
-   <strong> <center> <p>Cleats</p> </div>
+ <strong>  <center> <p>Cleats</p> </div>
   <div class="row">
   <div class="column-left"> 
    
@@ -124,8 +125,9 @@
   <div class="column-left1"> 
    
   <img src="https://www.imagehandler.net/?iset=0108&img=A82133000&fmt=png&w=300&h=300&iindex=0062&c=999&cmp=85" width="215px" >
-      <h4>$19.99</h4></a>
+    <h4>$19.99</h4></a><br><a href="<h3>back</h3>"><h3>HOME</h3></a>
     </div>
+ 
   <div class="column-center1">  
  
   <img src="https://www.imagehandler.net/?iset=0100&istyle=0000&fmt=png&w=2000&h=2000&cmp=85&c=999&img=A1005713000&iindex=0062&retBlank=1x1" width="215px">
