--- a/adidas-page.html
+++ b/adidas-page.html
@@ -125,7 +125,7 @@
   <div class="column-left1"> 
    
   <img src="https://www.imagehandler.net/?iset=0108&img=A82133000&fmt=png&w=300&h=300&iindex=0062&c=999&cmp=85" width="215px" >
-    <h4>$19.99</h4></a><br><a href="<h3>back</h3>"><h3>HOME</h3></a>
+    <h4>$19.99</h4></a><br><a href="index.html"><h3>HOME</h3></a>
     </div>
  
   <div class="column-center1">  
