--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
     </div></div>
   <div class="column-center">  
    <div class="zoom">
-    <a href="default.asp">
+    <a href="nike-page.html">
   <img src="https://www.festisite.com/static/partylogo/img/logos/nike.png" width="250px">
      </a></div>
     </div>
-  <div class="column-right">
+  <div class="puma-page.html">
     <div class="zoom">
     <a href="default.asp">
   <img src="http://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f8.png" width="250x">
