--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
   <img src="https://www.festisite.com/static/partylogo/img/logos/nike.png" width="250px">
      </a></div>
     </div>
-  <div class="puma-page.html">
-    <div class="zoom">
-    <a href="default.asp">
+  <div class="">
+    <div class="column-right">
+    <a href="puma-page.html">
   <img src="http://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f8.png" width="250x">
     </a>
     </div>
