--- a/puma-page.html
+++ b/puma-page.html
@@ -1,84 +1,7 @@
 <!DOCTYPE html>
 <head>
    <link rel="stylesheet" type="text/css" href="puma-page.css">
-<style>
-   
-  .column {
-    float: left;
-    width: 50%;
-}  
- 
 
-  .column-left
-  { 
-    position: absolute;
-    left: 30px;
-    top: 290px;
-  }
-  
-  
-  .column-right
-  { 
-    position: absolute;
-    left: 580px;
-    top: 375px;
-  }
-  
-  
-  .column-center
-  { 
-   position: absolute;
-    left: 320px;
-    top: 300px;
-  }
-  
-   .column-left1
-  { 
-    position: absolute;
-    left: 40px;
-    top: 760px;
-  }
-  
-  hr{
-  display: block;
-  border-style: solid;
-  border-width: 3px;
-  color:grey;
-  }
-  
-  .column-right1
-  { 
-    position: absolute;
-    left: 600px;
-    top: 805px;
-  }
-  
-  
-  .column-center1
-  { 
-   position: absolute;
-    left: 325px;
-    top: 800px;
-  }
-  
-  
-    h1{
-    font-size:45px;
-    font-family: "veranda", sans-serif;
-    background-color: black;
-    color:white;   
-    }
-    .cleats{
-    font-size:30px;
-  }
-  
-    body{
-    font-family: "veranda", sans-serif;
-    width:850px;
-    background-color: #E3E3E3;
-  }
- 
-   </style>
    
 <center>
   <body>
@@ -97,6 +20,7 @@
      Puma
      </h1>
  <center>
+   
   <div class="cleats">
  <strong>  <center> <p>Cleats</p> </div><p>All cleats are tested by the company and are of the highest quality</p>
   <div class="row">
@@ -114,7 +38,7 @@
     </div>
   <div class="column-right">
     
-  <img src="http://www.prodirectsoccer.com/us/siteimages/global/article/puma/puma-tricks/evo-power/evo-power-boot.png" width="245x"><br><br><br><br>
+  <img src="https://sportlockerdotcom.files.wordpress.com/2016/07/16aw_btl_pr_ts_puma-football_q3_evospeed-sl-s-right_angles_2.png" width="255x"><br><br><br>
      <p><br>Merculial Superfly 360<br>Black, Yellow</p>  
     <h4>$59.99</h4></a>
     </div>
