--- a/about-us.html
+++ b/about-us.html
@@ -123,7 +123,7 @@
       </div>
           <img src="https://png.pngtree.com/element_pic/00/16/07/0257775c654bd00.jpg" width="150px">
           
-
+<a href="index.html"><h3>HOME</h3></a>
   
   </body>
  </center>
