--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <img src="http://www.stickpng.com/assets/images/580b57fcd9996e24bc43c4f8.png" width="250x">
     </a>
     </div>
-    </center><br><br><br><br><br><br><br><br><br><br><br>
+    </center><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <strong><a href="about-us.html">
   About Us<a></strong>
 
