--- a/adidas-page.html
+++ b/adidas-page.html
@@ -41,14 +41,15 @@
      <p>Predator 18.1 Firm Ground<br>Black, Red</p>  
     <h4>$59.99</h4></a>
     </div>
-  
+     
+   <p>These cleats are available in sizes 6-13 and can be picked up in store or delivered to you</p>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <hr>
 
 <div class="cleats">
   <center> <p>Balls</p></div><p>All balls are tested by the company and are of the highest quality</p>
   <div class="row">
-
+ <p>These balls are available in sizes 3-5 and can be picked up in store or delivered to you</p>
     <div class="column-left1"> 
    
   <img src="https://www.imagehandler.net/?iset=0108&img=A82133000&fmt=png&w=300&h=300&iindex=0062&c=999&cmp=85" width="215px" >
