--- a/puma-page.html
+++ b/puma-page.html
@@ -24,6 +24,7 @@
   <div class="cleats">
  <strong>  <center> <p>Cleats</p> </div><p>All cleats are tested by the company and are of the highest quality</p>
   <div class="row">
+    <p>These cleats are available in sizes 6-13 and can be picked up in store or delivered to you</p>
   <div class="column-left"> 
    
   <img src="https://cdn.shopify.com/s/files/1/0425/7621/products/10481203.png?v=1541789673" width="250px">
@@ -39,7 +40,7 @@
   <div class="column-right">
     
   <img src="https://sportlockerdotcom.files.wordpress.com/2016/07/16aw_btl_pr_ts_puma-football_q3_evospeed-sl-s-right_angles_2.png" width="255x"><br><br><br>
-     <p><br>Merculial Superfly 360<br>Black, Yellow</p>  
+     <p><br>Puma EVOpower 2.3<br>Orange, White</p>  
     <h4>$59.99</h4></a>
     </div>
   
@@ -49,7 +50,7 @@
 <div class="cleats">
   <center> <p>Balls</p></div><p>All balls are tested by the company and are of the highest quality</p>
   <div class="row">
-
+<p>These balls are available in sizes 3-5 and can be picked up in store or delivered to you</p>
     <div class="column-left1"> 
    
   <img src="https://www.soccervillage.com/pub/media/catalog/product/cache/8c57341a38dc5cfb4ae0966e4e268371/0/8/082846-01_image.jpg" width="230px" >
