--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
   .column-left
   { 
     position: absolute;
-    left: 40px;
+    left: 25px;
     top: 823px;
   }
   
@@ -111,22 +111,22 @@
     With a average rating of 4.8 out of 5, our company is the highest rated soccer equipment <br>seller in Eastern Massachusetts.</p>
     <hr>
     <strong><h2>Achievements</h2></strong>
-        <div class="row">
+       </center> <div class="row">
       <div class="column"><h3>2017 Soccer Retailer of the Year<br></h3>
         <p>This award is given to the most successful soccer retailer.<br>The award takes into account the company's annual sales,<br>customers, and overall profit.
-      <p></div>
+      <p></div><center>
   <div class="column1"><h3><img src="https://www.paradiseawards.com/mm5/graphics/00000001/D-GL59-PP.png"width="150px"><br> 
-  
+    </center>
     </div>
     
     <div class="column"><h3>2014 Sports Startup of the Year<br></h3>
-        <p>This award is voted on by customers of the stores and the residents of Massachusetts. <br>It is given to the the year's best startup company.<br>
-      </div>
+        <p>This award is voted on by customers of the stores and the residents of Massachusetts. <br>It is given to the the year's best sports startup company.<br>
+      </div><center>
           <img src="https://png.pngtree.com/element_pic/00/16/07/0257775c654bd00.jpg" width="150px">
     <hr>      
-    </center>
-       <strong><h2>Contact Us</h2></strong>
-       </div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1-800-950-1994 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Email:soccersuccess@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address: 800 Boylston St, Boston, MA</p>
+    
+       <strong><h2>Contact Us</h2></strong></center>
+       </div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1-800-950-1994 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Email:soccersuccess@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Address: 800 Boylston St, Boston, MA</p>
   <hr>
  <div class="column-left">
       <img src="https://img.icons8.com/metro/1600/phone.png" width="30px">
