--- a/index.html
+++ b/index.html
@@ -55,8 +55,22 @@
     </div>
     </center><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <strong><a href="about-us.html">
+  
   About Us<a></strong>
+  <br><br>
+  <h2>Sign up to be notified when new items arrive:</h2>
 
+<form action="mailto:someone@example.com" method="post" enctype="text/plain">
+  <strong>Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong>
+<input type="text" name="name"><br>
+<strong><Name>Email&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</Name></strong>
+<input type="text" name="mail"><br>
+<div class=comment>  <strong>Comment</strong>
+  <input type="text" name="comment" size="50"><br><br></div>
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</form>
+<br><br><br><br>
  
   
   </body>
