--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 <input type="text" name="name"><br>
 <strong><Name>&nbsp;&nbsp;&nbsp;Email&nbsp;&nbsp;&nbsp;&nbsp;</Name></strong>
 <input type="text" name="mail"><br>
-<div class=comment>  <strong>Comment</strong>
-  <input type="text" name="comment" size="50"><br><br></div>
+<strong>Comment</strong>
+  <input type="text" name="comment" size="50"><br><br>
 <input type="submit" value="Send">
   
 </form>
